fixed businesscard text alignment

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -330,6 +330,7 @@ footer {
 
 .business-card {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     grid-column: 1/3;
